feat(reset-password): update reset password flow
